<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChildDetailsActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/label_first_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name_container"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/label_last_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/age_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_container"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/label_age" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/weight_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/age_container"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/label_weight" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save_label"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_16dp"/>
</RelativeLayout>